--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
     "prettier": "^2.5.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
@@ -32,9 +33,11 @@
     "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
