--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,29 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
-    "client": "webpack serve"
+    "client": "webpack serve",
+    "lint": "npx eslint src --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/react": "^17.0.38",
+    "@types/react-paginate": "^7.1.1",
     "@types/redux": "^3.6.0",
     "@webpack-cli/generators": "^2.4.1",
+    "circular-dependency-plugin": "^5.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
     "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
